BUGFIX-1178: clipping issue on iframe

--- a/widget/v0.1/widget.css
+++ b/widget/v0.1/widget.css
@@ -112,7 +112,3 @@ html[data-kyber-widget-edition='etheremon'] .kyber-widget-button {
     top: 50%;
     border: 0;
 }
-
-@media (max-width: 650px) {
-
-}
